about page update

--- a/html/about.html
+++ b/html/about.html
@@ -23,18 +23,77 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
+            <!-- Floating action button to download resume.pdf -->
+            <div class="fab">
+            </div>
+
             <!-- Adjustment content wrapper -->
             <div class="content">
-                <!-- upper contains img and description -->
-                <div class="upper">
+                <!-- Introduce myself -->
+                <div class="desc about">
+                    <div class="hi">
+                        <h1> Hi! </h1>
+                    </div>
                     <div class="text">
-                        <h1> Hi, I am Jason</h1>
-                        <p> I am a software engineer having vast interest in different stack of software technology. Starting from embedded system and microcontrollers using C; to mobile phone projects using Java; recently starting to play around with VR and game development in Unity3D and Unreal Engine. Welcome to my website, I will be frequently updating this website featuring more pet-projects I have been doing. If you like any part of website, feel free to checkout the Github. </p>
+                        <h1> I am Jason</h1>
+                        <p> a software engineer having vast interest in different stack of software technology. Starting from embedded system and microcontrollers using C; to mobile phone projects using Java; recently starting to play around with VR and game development in Unity3D and Unreal Engine. Welcome to my website, I will be frequently updating this website featuring more pet-projects I have been doing. If you like any part of website, feel free to checkout the Github.
+                        </p>
                     </div>
                 </div>
 
-                <!-- lower contains three sections listing items -->
-                <div class="lower">
+                <!-- Programming skills, language speaks, tools familiar with -->
+                <div class="desc blockdisplay skills">
+                    <div class="title">
+                        <h1> Skills </h1>
+                    </div>
+                    <div class="skill-content">
+                        <h3 class="skill-high"> C/C++ </h3>
+                        <h3 class="skill-high"> Java </h3>
+                        <h3 class="skill-high"> C# </h3>
+                        <h3 class="skill-high"> Git </h3>
+                        <h3 class="skill-high"> Agile </h3>
+                        <h3 class="skill-mid"> Python </h3>
+                        <h3 class="skill-mid"> Cryptography </h3>
+                        <h3 class="skill-mid"> Unity3D </h3>
+                        <h3 class="skill-mid"> Unreal Engine </h3>
+                        <h3 class="skill-low"> HTML5 </h3>
+                        <h3 class="skill-low"> CSS3 </h3>
+                        <h3 class="skill-low"> Javascript </h3>
+                    </div>
+                </div>
+
+                <!-- Experience -->
+                <div class="desc blockdisplay experience">
+                    <div class="title">
+                        <h1> Experience </h1>
+                    </div>
+
+                    <div class="job">
+                        <div class="job-title">
+                            <h1> jNet ThingsX </h1>
+                            <p> Aug. 2015 - present </p>
+                            <h3> Software Engineer </h3>
+                        </div>
+                        <div class="job-content">
+                            <ul class="job-section">
+                                <p> Designed ePassport applet in C that provides top-tier performance time </p>
+                                <p> Implemented authentication protocols, key management scheme, and ISO standard APDU commands</p>
+                                <p> Designed a testing framework using Visual Studio in C#. Implemented 300+ tests </p>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Education -->
+                <div class="desc blockdisplay education">
+                    <div class="title">
+                        <h1> Education </h1>
+                    </div>
+
+                    <div class="school">
+                        <h1> Purdue University </h1>
+                        <h3> Bachelor Degree in Computer Engineering </h3>
+                    </div>
                 </div>
             </div>
         </section>
