about page layout & content

--- a/html/about.html
+++ b/html/about.html
@@ -47,18 +47,24 @@
                         <h1> Skills </h1>
                     </div>
                     <div class="skill-content">
-                        <h3 class="skill-high"> C/C++ </h3>
-                        <h3 class="skill-high"> Java </h3>
-                        <h3 class="skill-high"> C# </h3>
-                        <h3 class="skill-high"> Git </h3>
-                        <h3 class="skill-high"> Agile </h3>
-                        <h3 class="skill-mid"> Python </h3>
-                        <h3 class="skill-mid"> Cryptography </h3>
-                        <h3 class="skill-mid"> Unity3D </h3>
-                        <h3 class="skill-mid"> Unreal Engine </h3>
-                        <h3 class="skill-low"> HTML5 </h3>
-                        <h3 class="skill-low"> CSS3 </h3>
-                        <h3 class="skill-low"> Javascript </h3>
+                        <div class="skill-high">
+                            <h3> C/C++ </h3>
+                            <h3> Java </h3>
+                            <h3> C# </h3>
+                            <h3> Git </h3>
+                            <h3> Agile </h3>
+                        </div>
+                        <div class="skill-mid">
+                            <h3> Python </h3>
+                            <h3> Cryptography </h3>
+                            <h3> Unity3D </h3>
+                            <h3> Unreal Engine </h3>
+                        </div>
+                        <div class="skill-low">
+                            <h3> HTML5 </h3>
+                            <h3> CSS3 </h3>
+                            <h3> Javascript </h3>
+                        </div>
                     </div>
                 </div>
 
@@ -69,17 +75,17 @@
                     </div>
 
                     <div class="job">
-                        <div class="job-title">
-                            <h1> jNet ThingsX </h1>
-                            <p> Aug. 2015 - present </p>
-                            <h3> Software Engineer </h3>
-                        </div>
-                        <div class="job-content">
-                            <ul class="job-section">
-                                <p> Designed ePassport applet in C that provides top-tier performance time </p>
-                                <p> Implemented authentication protocols, key management scheme, and ISO standard APDU commands</p>
-                                <p> Designed a testing framework using Visual Studio in C#. Implemented 300+ tests </p>
-                            </ul>
+                        <div class="job-left">
+                            <div class="job-title">
+                                <h3> jNet ThingsX </h3>
+                                <p> Aug. 2015 - present </p>
+                                <h1> Software Engineer </h1>
+                            </div>
+                            <div class="job-content">
+                                <p>At jNet ThingsX, I have been learning a lot from this position, not only in terms of better coding practices and algorithm implementations; as well as general knowledge of good engineer practices, and understanding of project lifecycles.</p>
+                                <p>I have been developing secure embedded application on both native OS and JavaCard OS. I was fortunate that I got to involve in full development lifecycle - from architecturing to final certification - on my first project. The project was a secure embedded application solution that features top-of-the-line ePassport solution in both performance and security. Afterward, I moved to refactoring and improving existing JavaCard OS functionalities, as well as enhancing OS features.</p>
+                                <p>I was introduced to some other important concepts and ways of doing things other than technical enhancement; including agile management, good git branching practices, automations, integration testings, certification processes, etc.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,8 +98,18 @@
 
                     <div class="school">
                         <h1> Purdue University </h1>
-                        <h3> Bachelor Degree in Computer Engineering </h3>
+                        <h3> B.S. in Computer Engineering </h3>
+                        <p> Provided foundamental knowledge in programming, data structure, algorithms, and mostly hardware/embedded system knowledge. School curriculums focuses using C language and Verilog as most courses orienting around microcontrollers, embedded system, and ASIC design. Selectively picked OOP courses like Java, and worked on mobile application development projects. </p>
                     </div>
+                </div>
+
+                <!-- Conclude -->
+                <div class="conclude">
+                    <div>
+                        <h3> Don't forget to checkout the projects I had been doing! </h3>
+                        <h3> Feel free to send me an email regarding any bug or suggestions on the website. </h3>
+                    </div>
+                    <h1> Thanks!</h1>
                 </div>
             </div>
         </section>
