added fab for download

--- a/html/about.html
+++ b/html/about.html
@@ -15,6 +15,7 @@
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/base.js" type="text/javascript"></script>
+        <script src="js/about.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -24,8 +25,7 @@
 
         <section class="leftpanel">
             <!-- Floating action button to download resume.pdf -->
-            <div class="fab">
-            </div>
+            <div class="fab"><a href="statics/Resume.pdf" download><i class="fa fa-cloud-download"></i></a></div>
 
             <!-- Adjustment content wrapper -->
             <div class="content">
@@ -74,14 +74,14 @@
                         <h1> Experience </h1>
                     </div>
 
-                    <div class="job">
-                        <div class="job-left">
+                    <div class="job-content">
+                        <div class="job job-left">
                             <div class="job-title">
                                 <h3> jNet ThingsX </h3>
                                 <p> Aug. 2015 - present </p>
                                 <h1> Software Engineer </h1>
                             </div>
-                            <div class="job-content">
+                            <div class="job-desc">
                                 <p>At jNet ThingsX, I have been learning a lot from this position, not only in terms of better coding practices and algorithm implementations; as well as general knowledge of good engineer practices, and understanding of project lifecycles.</p>
                                 <p>I have been developing secure embedded application on both native OS and JavaCard OS. I was fortunate that I got to involve in full development lifecycle - from architecturing to final certification - on my first project. The project was a secure embedded application solution that features top-of-the-line ePassport solution in both performance and security. Afterward, I moved to refactoring and improving existing JavaCard OS functionalities, as well as enhancing OS features.</p>
                                 <p>I was introduced to some other important concepts and ways of doing things other than technical enhancement; including agile management, good git branching practices, automations, integration testings, certification processes, etc.</p>
