links website project contents

--- a/html/projects.html
+++ b/html/projects.html
@@ -32,9 +32,14 @@
                     <li><a href="projects/xiaotang/xiaotang.html">
                         <img src="projects/xiaotang/XiaoTangStoryBoard.jpg"><h1>XiaoTang</h1><h3>Android UI Design</h3>
                     </a></li>
+
                     <li><a href="projects/fragments/fragments.html"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
+
                     <li><a href="projects/pinballarcade/pinballarcade.html"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
-                    <li><a href="projects/website/website.html"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
+
+                    <li><a href="projects/website/website.html">
+                        <img src="projects/website/about_page.jpg"><h1>Website</h1><h3>Personal Web Design</h3>
+                    </a></li>
                 </ul>
             </div>
 
