--- a/projects/website/website.html
+++ b/projects/website/website.html
@@ -10,8 +10,8 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="projects/project_base.css">
+        <link rel="stylesheet" href="css/gallery.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -26,19 +26,24 @@
 
         <section class="leftpanel">
             <div class="showcase">
-                <div class="fullimg">
+                <div class="fullimg" style="background-image: url(projects/website/about_page.jpg)">
                 </div>
 
                 <div class="content">
                     <h1> Personal Website </h1>
                     <p> That's this site! I started building personal website because I felt traditional resume can not demonstrate who I am as a person and as a developer; and I don't like online templates because none of it actually fits my idea. Therefore, I jumped right into learning HTML, CSS and Javascript and created a website to illustrate my idea and thoughts.</p>
-                    <p> Special thanks to Zejun Yuan for design suggestions </p>
+                    <p> <br><br> Special thanks to Zejun Yuan for design suggestions </p>
                 </div>
             </div>
 
             <section class="gallery-wrapper">
                 <div class="gallery">
-                    <div class="gallery-img"><img src="#"></div>
+                    <div class="gallery-img"><img src="projects/website/about_page.jpg"></div>
+                    <div class="gallery-img"><img src="projects/website/homepage.jpg"></div>
+                    <div class="gallery-img"><img src="projects/website/project_detail_content.jpg"></div>
+                    <div class="gallery-img"><img src="projects/website/project_detail_Default.jpg"></div>
+                    <div class="gallery-img"><img src="projects/website/project_page_Default.jpg"></div>
+                    <div class="gallery-img"><img src="projects/website/project_page_OnHover.jpg"></div>
                 </div>
             </section>
 
@@ -65,3 +70,4 @@
         </section>
     </body>
 </html>
+
