--- a/projects/xiaotang/xiaotang.html
+++ b/projects/xiaotang/xiaotang.html
@@ -37,23 +37,23 @@
 
             <section class="gallery-wrapper">
                 <div class="gallery">
-                    <div class="gallery-img"><img src="projects/xiaotang/XiaoTangStoryBoard.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP1.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP2.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUseHI.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePassword.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePI.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphDayP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphWeekP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderMP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderYP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistorySelectedDateP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutMenuP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutNewRecordP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutProfileP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingHealthP.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP1.jpg"></div>
-                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP2.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/XiaoTangStoryBoard.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP1.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP2.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUseHI.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePassword.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePI.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphDayP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphWeekP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderMP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderYP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistorySelectedDateP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutMenuP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutNewRecordP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutProfileP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingHealthP.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP1.png"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP2.png"></div>
                 </div>
             </section>
 
