--- a/projects/pinballarcade/pinballarcade.html
+++ b/projects/pinballarcade/pinballarcade.html
@@ -10,8 +10,8 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="projects/project_base.css">
+        <link rel="stylesheet" href="css/gallery.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -22,11 +22,11 @@
 
     <body>
         <!-- Icon -->
-        <a href="#" id="logo"></a>
+        <div href="index.html" id="logo"></div>
 
         <section class="leftpanel">
             <div class="showcase">
-                <div class="fullimg">
+                <div class="fullimg" style="background-image: url(projects/pinballarcade/flowchart.jpg)">
                 </div>
 
                 <div class="content">
@@ -37,10 +37,12 @@
 
             <section class="gallery-wrapper">
                 <div class="gallery">
-                    <div class="gallery-img"><img src="#"></div>
+                    <div class="gallery-img"><img src="projects/pinballarcade/flowchart.png"></div>
+                    <div class="gallery-img"><img src="projects/pinballarcade/sketch1.png"></div>
+                    <div class="gallery-img"><img src="projects/pinballarcade/sketch2.png"></div>
+                    <div class="gallery-img"><img class="video" id="f4q2Pamegeo" src="projects/pinballarcade/video.png"></div>
                 </div>
             </section>
-
         </section>
 
         <section class="rightpanel">
@@ -64,4 +66,3 @@
         </section>
     </body>
 </html>
-
