--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS style links -->
+        <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/fab.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -15,12 +19,39 @@
     <!-- End of head descriptor -->
 
     <body>
-        <section id="homepage">
+        <!-- Navigation bar -->
+        <section id="navbar">
+            <ul id="navbar-pages">
+                <li class="navbar-pages-current"><a href="#"><h3>Home</h3></a></li>
+                <li><a href="#"><h3>About</h3></a></li>
+                <li><a href="#"><h3>Projects</h3></a></li>
+            </ul>
+
+            <ul id="navbar-links">
+                <li><a href="#"><i class="fa fa-cloud-download"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
+            </ul>
+
+            <div id="navbar-close-button">X</div>
         </section>
 
+        <!-- Floating action button -->
+        <div id="fab">
+            <div id="fab-current-page"></div><div></div><div></div>
+        </div>
+
+        <!-- Homepage section -->
+        <section id="homepage">
+            <div id="pic"></div>
+            <h1> Software Engineer </h1>
+        </section>
+
+        <!-- About/Resume section -->
         <section id="about">
         </section>
 
+        <!-- Project section -->
         <section id="project">
         </section>
     </body>
