--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
     <body>
         <!-- Navigation bar -->
         <section id="navbar">
-            <ul id="navbar-pages">
-                <li class="navbar-pages-current"><a href="#"><h3>Home</h3></a></li>
-                <li><a href="#"><h3>About</h3></a></li>
-                <li><a href="#"><h3>Projects</h3></a></li>
-            </ul>
+            <div id="navbar-wrapper">
+                <ul id="navbar-pages">
+                    <li class="navbar-pages-current"><a href="#"><h3>Home</h3></a></li>
+                    <li><a href="#"><h3>About</h3></a></li>
+                    <li><a href="#"><h3>Projects</h3></a></li>
+                </ul>
 
-            <ul id="navbar-links">
-                <li><a href="#"><i class="fa fa-cloud-download"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-            </ul>
-
-            <div id="navbar-close-button">X</div>
+                <ul id="navbar-links">
+                    <li><a href="#"><i class="fa fa-cloud-download"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    <li id="navbar-close-button"><a href="#"><i class="fa fa-times"></i></a></li>
+                </ul>
+            </div>
         </section>
 
         <!-- Floating action button -->
