--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
         <!-- Homepage section -->
         <section id="homepage">
-            <div id="pic"></div>
-            <h1> Software Engineer </h1>
+            <div id="homepage-wrapper">
+                <div id="pic"></div>
+                <h1> Software Engineer </h1>
+            </div>
         </section>
 
         <!-- About/Resume section -->
