--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/navbarControllerWithFAB.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
