--- a/index.html
+++ b/index.html
@@ -14,38 +14,43 @@
         <link rel="stylesheet" href="css/fab.css">
 
         <!-- Javascript animation -->
-        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
         <script src="js/navbarControllerWithFAB.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
     <body>
         <!-- Navigation bar -->
-        <section id="navbar">
+        <div id="navbar">
             <div id="navbar-wrapper">
                 <ul id="navbar-pages">
-                    <li class="navbar-pages-current"><a href="#"><h3>Home</h3></a></li>
-                    <li><a href="#"><h3>About</h3></a></li>
-                    <li><a href="#"><h3>Projects</h3></a></li>
+                    <li class="navbar-pages-current"><a href="#homepage"><h3>Home</h3></a></li>
+                    <li><a href="#about"><h3>About</h3></a></li>
+                    <!--li><a href="#project"><h3>Projects</h3></a></li-->
                 </ul>
 
                 <ul id="navbar-links">
                     <li><a href="#"><i class="fa fa-cloud-download"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li id="navbar-close-button"><a href="#"><i class="fa fa-times"></i></a></li>
+                    <li id="navbar-close-button"><i class="fa fa-times"></i></li>
                 </ul>
             </div>
-        </section>
+        </div>
 
         <!-- Floating action button -->
         <div id="fab">
             <div id="fab-current-page"></div><div></div><div></div>
         </div>
 
+        <!-- Floating scrolling indicator -->
+        <div id="blinking-scroller">
+        </div>
+
         <!-- Homepage section -->
         <section id="homepage">
-            <div id="homepage-wrapper">
+            <div class="content-wrapper" id="homepage-wrapper">
                 <div id="pic"></div>
                 <h1> Software Engineer </h1>
             </div>
@@ -53,10 +58,101 @@
 
         <!-- About/Resume section -->
         <section id="about">
+            <!-- Top introduction section -->
+            <div class="about-section-div">
+                <div class="content-wrapper" id="about-intro">
+                    <!-- The big Hi! -->
+                    <div id="about-top-greeting">
+                        <h1> Hi! </h1>
+                    </div>
+                    <!-- Introduction to myself -->
+                    <div>
+                        <h1> I am Jason</h1>
+                        <p> a software engineer having vast interest in different stack of software technology. Starting from embedded system and microcontrollers using C; to mobile phone projects using Java; recently starting to play around with VR and game development in Unity3D and Unreal Engine. Welcome to my website, I will be frequently updating this website featuring more pet-projects I have been doing. If you like any part of website, feel free to checkout the Github.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Skill bar section -->
+            <div class="about-section-div">
+                <div class="content-wrapper">
+                    <h1> Skills </h1>
+                    <div id="skill-display-wrapper">
+                        <!-- Most comfortable skills -->
+                        <div id="most-comfortable-skills">
+                            <h3> C/C++ </h3>
+                            <h3> Agile </h3>
+                            <h3> Java </h3>
+                            <h3> Git </h3>
+                            <h3> C# </h3>
+                        </div>
+                        <!-- Experienced with skills -->
+                        <div id="experienced-with-skills">
+                            <h3> Secure Programming </h3>
+                            <h3> Unreal Engine </h3>
+                            <h3> Cryptography </h3>
+                            <h3> Unity3D </h3>
+                            <h3> Python </h3>
+                        </div>
+                        <!-- Still learning skills -->
+                        <div id="still-learning-skills">
+                            <h3> Javascript </h3>
+                            <h3> HTML5 </h3>
+                            <h3> CSS3 </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Experience section -->
+            <div class="about-section-div">
+                <div class="content-wrapper">
+                    <h1> Experience </h1>
+                    <!-- job sub section has left and right sections -->
+                    <div id="job-section-wrapper">  <!-- Need this extra div to align left and right sections -->
+                    <div class="job-sub-section job-sub-section-left">
+                        <div class="job-sub-section-title">
+                            <h1> jNet ThingsX </h1>
+                            <p> Aug. 2015 - present </p>
+                            <h3> Software Engineer </h3>
+                        </div>
+                        <div class="job-sub-section-details">
+                            <p>At jNet ThingsX, I have been learning a lot from this position, not only in terms of better coding practices and algorithm implementations; as well as general knowledge of good engineer practices, and understanding of project lifecycles.</p>
+                            <p>I have been developing secure embedded application on both native OS and JavaCard OS. I was fortunate that I got to involve in full development lifecycle - from architecturing to final certification - on my first project. The project was a secure embedded application solution that features top-of-the-line ePassport solution in both performance and security. Afterward, I moved to refactoring and improving existing JavaCard OS functionalities, as well as enhancing OS features.</p>
+                            <p>I was introduced to some other important concepts and ways of doing things other than technical enhancement; including agile management, good git branching practices, automations, integration testings, certification processes, etc.</p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Education section -->
+            <div class="about-section-div">
+                <div class="content-wrapper">
+                    <h1> Education </h1>
+                    <div class="education-sub-section">
+                        <h1> Purdue University </h1>
+                        <h3> B.S. in Computer Engineering </h3>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Conclusion section -->
+            <div class="about-section-div">
+                <div class="content-wrapper">
+                    <h3> keep scrolling to checkout projects that I have been doing! </h3>
+                    <!-- The big thanks! -->
+                    <div id="about-bottom-salute">
+                        <h1> Thanks! </h1>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Project section -->
         <section id="project">
+            <h1> Coming soon! </h1>
         </section>
     </body>
 
