cleanup files from previous version

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </ul>
 
                 <ul id="navbar-links">
-                    <li><a href="#"><i class="fa fa-cloud-download"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    <li><a href="statics/Resume.pdf"><i class="fa fa-cloud-download"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/jasonlin0815"><i class="fa fa-github"></i></a></li>
                     <li id="navbar-close-button"><i class="fa fa-times"></i></li>
                 </ul>
             </div>
