fab & nav scrolling effect

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Floating action button -->
         <div id="fab">
-            <div id="fab-current-page"></div><div></div><div></div>
+            <div class="fab-current-page"></div><div></div><div></div>
         </div>
 
         <!-- Floating scrolling indicator -->
