created scrolling indicator

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="css/fab.css">
+        <link rel="stylesheet" href="css/blinkscroller.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js"></script>
@@ -46,6 +47,7 @@
 
         <!-- Floating scrolling indicator -->
         <div id="blinking-scroller">
+            <div id="blinking-scroller-1"></div><div id="blinking-scroller-2"></div><div id="blinking-scroller-3"></div>
         </div>
 
         <!-- Homepage section -->
