--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <link rel="stylesheet" href="css/blinkscroller.css">
 
         <!-- Javascript animation -->
-        <script src="js/jquery-3.1.1.min.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/navbarControllerWithFAB.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js"></script>  <!-- jQuery -->
+        <script src="js/jquery.easing.1.3.js"></script> <!-- Easing effect -->
+        <script src="js/navbarControllerWithFAB.js" type="text/javascript"></script> <!-- fab & navbar effect -->
+        <script src="js/blinkingScroller.js" type="text/javascript"></script> <!-- homepage scrolling indicator -->
+        <script src="js/typingEffect.js" type="text/javascript"></script> <!-- homepage typing effect -->
+        <script src="js/dropdownFooter.js" type="text/javascript"></script> <!-- dropdown footer effect -->
     </head>
     <!-- End of head descriptor -->
 
@@ -31,7 +34,7 @@
                     <!--li><a href="#project"><h3>Projects</h3></a></li-->
                 </ul>
 
-                <ul id="navbar-links">
+                <ul id="external-links">
                     <li><a href="statics/Resume.pdf"><i class="fa fa-cloud-download"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/jasonlin0815"><i class="fa fa-github"></i></a></li>
@@ -45,16 +48,18 @@
             <div class="fab-current-page"></div><div></div><div></div>
         </div>
 
-        <!-- Floating scrolling indicator -->
-        <div id="blinking-scroller">
-            <div id="blinking-scroller-1"></div><div id="blinking-scroller-2"></div><div id="blinking-scroller-3"></div>
-        </div>
-
         <!-- Homepage section -->
         <section id="homepage">
             <div class="content-wrapper" id="homepage-wrapper">
                 <div id="pic"></div>
-                <h1> Software Engineer </h1>
+                <h1><span id="homepage-typing-display"></span><span id="homepage-cursor">|</span></h1>
+
+                <!-- Floating scrolling indicator -->
+                <div id="blinking-scroller">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </section>
 
@@ -150,14 +155,21 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Project section -->
-        <section id="project">
-            <h1> Coming soon! </h1>
+            <!-- Dropdown footer -->
+            <div id="dropdown-footer-wrapper"> <!-- To reserve space -->
+                <div id="dropdown-footer">
+                    <h3> Almost forget! </h3>
+                    <h3> Here's link to my resume, linkedin and github! </h3>
+                    <div>
+                        <ul id="external-links">
+                            <li><a href="statics/Resume.pdf"><i class="fa fa-cloud-download"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://github.com/jasonlin0815"><i class="fa fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
-
-    <footer>
-    </footer>
 </html>
